fix: what was I thinking with this stupid negative letter spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -139,7 +139,7 @@
 
         .post-title {
             color: $color-link;
-            letter-spacing: -1px;
+            // letter-spacing: -1px;
             font-weight: normal;
             margin-bottom: 0;
             font-size: 26px;
